Modified book_info with the right title

--- a/src/main/asciidoc/project/book_info.adoc
+++ b/src/main/asciidoc/project/book_info.adoc
@@ -1,4 +1,4 @@
-= Functionality of Narayana supported within Red Hat JBoss EAP
+= Narayana Project Documentation
 
 :leveloffset: 1
 include::{projectSourceDir}/author_group.adoc[]
