--- a/src/main/asciidoc/project/jts/introduction.adoc
+++ b/src/main/asciidoc/project/jts/introduction.adoc
@@ -6,9 +6,9 @@ Knowledge of Web Services is not required to administer a {parentProduct} instal
 This, administrative tasks are separated when they touch only one component or the other.
 
 Apart from ensuring that the run-time system is executing normally, there is little continuous administration needed for the {productName} software.
-Refer to Refer to <<_important_points_for_administrators>> for some specific concerns:
+Refer to Refer to <<jts_important_points_for_administrators>> for some specific concerns:
 
-[#_important_points_for_administrators]
+[[jts_important_points_for_administrators]]
 * The present implementation of the {productName} system provides no security or protection for data.
 The objects stored in the {productName} object store are (typically) owned by the user who ran the application that created them.
 The Object Store and Object Manager facilities make no attempt to enforce even the limited form of protection that Unix/Windows provides.
