--- a/src/main/asciidoc/project/project_documentation.adoc
+++ b/src/main/asciidoc/project/project_documentation.adoc
@@ -1,8 +1,11 @@
 
 :toclevels: {toclevel}
-:leveloffset: +1
+:doctype: book
+:sectnums:
+
 include::{projectSourceDir}/book_info.adoc[]
 include::{projectSourceDir}/preface.adoc[]
+
 include::{projectSourceDir}/core/core.adoc[]
 include::{projectSourceDir}/jta/jta.adoc[]
 include::{projectSourceDir}/jts/jts.adoc[]
@@ -13,4 +16,3 @@ include::{projectSourceDir}/stm/stm.adoc[]
 include::{projectSourceDir}/compensations/compensations.adoc[]
 include::{projectSourceDir}/osgi/osgi.adoc[]
 include::{projectSourceDir}/appendix/appendix.adoc[]
-:leveloffset: -1
